dev/tvplatform-user-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-user-gateway-dev
  namespace: users
  labels:
    app: tvplatform-user-gateway-dev
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-user-gateway-dev
      env: dev
  template:
    metadata:
      labels:
        app: tvplatform-user-gateway-dev
        env: dev
    spec:
      containers:
      - name: tvplatform-user-gateway-dev
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-user-gateway:9 # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: env
                operator: In
                values:
                - dev
      tolerations:
      - key: "env"
        operator: "Equal"
        value: "dev"
        effect: "PreferNoSchedule"
