dev/tvplatform-user-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-user-gateway
  namespace: users
spec:
  type: NodePort
  selector:
    app: tvplatform-user-gateway
    env: dev
  ports:
  - name: http
    port: 8000 # svc port
    targetPort: 8000 # app port
