dev/tvplatform-user-gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: usergw-certificate
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tvplatform-user-gateway
  namespace: users
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.uapi.dev-ooro.co.uk
        - uapi.dev-ooro.co.uk
      secretName: usergw-certificate
  rules:
    - host: www.uapi.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-user-gateway
                port:
                  number: 8000
    - host: uapi.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-user-gateway
                port:
                  number: 8000
